--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "next": "14.1.4",
     "react": "^18",
     "react-dom": "^18",
-    "uuidv4": "^6.2.13"
+    "uuid": "^9.0.1"
   },
   "devDependencies": {
     "eslint": "^8",
